--- a/index.html
+++ b/index.html
@@ -9,29 +9,18 @@
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link type="text/css" property="stylesheet" href="build/styles/styles.css" rel="stylesheet">
     <link type="text/css" property="stylesheet" href="build/styles/stars.css" rel="stylesheet">
-
 </head>
 
 <body>
 
-    <div id="stars"> </div>
-    <div id="stars2"> </div>
-    <div id="stars3"> </div>
-    <div class='title'>
+    <div class="stars1"> </div>
+    <div class="stars2"> </div>
+    <div class="stars3"> </div>
 
-        <div class="button-like"></div>
+    <div class="app slider-wrapper"></div>
 
-    </div>
-
-    <div class='title2'>    </div>
-    
 </body>
-
 <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-
 <script type="text/javascript" src="build/script/script.js"></script>
-
-
-
 </html>
